--- a/style1.css
+++ b/style1.css
@@ -9,7 +9,7 @@
 
 body {
   font-family: 'Poppins', sans-serif;
-  background-color: #f0f2f5;
+  background-color: #58785e;
   display: flex;
   min-height: 100vh;
   flex-direction: column;
